--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "afatmustafa/blade-hugeicons": "^0.0.4",
         "awcodes/filament-table-repeater": "2.0",
+        "codeat3/blade-fluentui-system-icons": "^1.33",
         "codeat3/blade-solar-icons": "^1.1",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
