--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^11.0",
+        "owenvoke/blade-fontawesome": "^2.8",
         "spatie/laravel-medialibrary": "^11.12"
     },
     "require-dev": {
