--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "awcodes/filament-table-repeater": "2.0",
         "codeat3/blade-fluentui-system-icons": "^1.33",
         "codeat3/blade-solar-icons": "^1.1",
+        "codeat3/blade-vaadin-icons": "^1.5",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "guava/filament-nested-resources": "^1.2",
+        "ibrahim-bougaoua/filaprogress": "^0.1.0",
         "laravel/framework": "^11.31",
         "laravel/jetstream": "^5.3",
         "laravel/reverb": "^1.0",
