--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.7",
-        "@tailwindcss/typography": "^0.5.10",
-        "autoprefixer": "^10.4.16",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-echo": "^1.19.0",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.32",
+        "postcss": "^8.5.1",
+        "postcss-nesting": "^13.0.1",
         "pusher-js": "^8.4.0-rc2",
-        "tailwindcss": "^3.4.0",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0"
     }
 }
