--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^11.0",
         "owenvoke/blade-fontawesome": "^2.8",
-        "spatie/laravel-medialibrary": "^11.12"
+        "spatie/laravel-medialibrary": "^11.12",
+        "wireui/wireui": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
