--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.14.8"
     }
 }
